Configured VSCode to see the unit tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,24 @@
 {
-    "cSpell.words": [
-        "addopts",
-        "minversion",
-        "mnemosys",
-        "mypy",
-        "pytest",
-        "sqlalchemy",
-        "testpaths",
-        "xdist"
-    ],
-    "evenBetterToml.validation.enabled": false
+  "python.defaultInterpreterPath": ".venv/bin/python",
+  "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": false,
+  "python.testing.nosetestsEnabled": false,
+  "python.testing.pytestPath": ".venv/bin/pytest",
+  "python.testing.pytestArgs": [
+    "tests"
+  ],
+  "python.analysis.extraPaths": [
+    "src"
+  ],
+  "cSpell.words": [
+    "addopts",
+    "minversion",
+    "mnemosys",
+    "mypy",
+    "pytest",
+    "sqlalchemy",
+    "testpaths",
+    "xdist"
+  ],
+  "evenBetterToml.validation.enabled": false
 }
