feat: implement polymorphic Instrument hierarchy
Add base Instrument class with joined table inheritance for polymorphic
instrument types. Implement StringedInstrument with full attributes and
placeholder classes for KeyboardInstrument, WindInstrument, PercussionInstrument.

Establishes architectural pattern for polymorphic models. Existing tests
may fail temporarily - will be fixed in migration task.

- Base Instrument: id, name, instrument_type discriminator
- StringedInstrument: string_count, scale_length, technique_capabilities
- Placeholder classes: minimal implementation for future expansion

Tests verify polymorphic queries return correct subclass instances.

Add documented ruff exceptions for SQLAlchemy __mapper_args__ pattern
and sessionmaker factory pattern in tests.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,12 @@ known-first-party = ["mnemosys_core"]
     "E402",   # Module imports after code - enums must be defined before model imports
     "RUF022", # __all__ grouped logically (enums, models) rather than pure alphabetical
 ]
+"src/mnemosys_core/db/models/*.py" = [
+    "RUF012", # SQLAlchemy __mapper_args__ is a class-level dict used by the ORM framework
+]
+"tests/**/*.py" = [
+    "N806",   # sessionmaker returns factory classes conventionally named with PascalCase
+]
 
 [tool.mypy]
 python_version = "3.13"
