--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,12 @@ jobs:
       - name: Install dependencies
         run: poetry install --no-interaction
 
+      - name: Run ruff check
+        run: poetry run ruff check
+
+      - name: Run mypy
+        run: poetry run mypy src/
+
       - name: Run tests with coverage
         run: |
           poetry run pytest \
